@@ -15,7 +15,11 @@ require 'lib.pl';
 
 my $dbh;
 eval {$dbh= DBI->connect($test_dsn, $test_user, $test_password,
-                      { RaiseError => 1, PrintError => 1, AutoCommit => 0 });};
+        { mysql_bind_type_guessing => 1,
+          RaiseError => 1,
+          PrintError => 1,
+          AutoCommit => 1 });};
+
 if ($@) {
     plan skip_all => "no database connection";
 }
